--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -11,6 +11,6 @@
           "label": "indexer"
         }
     },
-    "postCreateCommand": "pipx install algokit-cli",
-    "postStartCommand": "algokit localnet start"
+    "postCreateCommand": "npm install",
+    "postStartCommand": "npx algokit localnet start"
 }
